[package]
name = "native_rust"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flutter_rust_bridge = "1"
anyhow = "1"
libp2p-tcp = "*"
futures = "0.3.25"
tungstenite = "0.18.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
cbor = "0.4.1"
rustc-serialize = "0.3.24"
async-trait = "0.1.60"
event-listener = "2.5.3"
[dependencies.libp2p]
version = "0.50.0"
features = [
    "async-std",
    "dns",
    "gossipsub",
    "identify",
    "kad",
    "mdns",
    "mplex",
    "noise",
    "ping",
    "pnet",
    "tcp",
    "yamux",
    "rendezvous",
    "relay",
    "macros",
    "request-response",
]
